--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,20 @@
+   .menu-text {
+    color: #f7c72a;
+    font-size: 15px;
+   }
+   
+   .menu-text:hover {
+    color: #fff;
+  }
+
+  .menu-icon {
+    color: #f7c72a;
+  }
+
+  .menu-icon:hover {
+    color: #fff;
+  }
+
    .nav-link {
      color: #f7c72a;
    }
