Fixing phone display.

--- a/css/main.css
+++ b/css/main.css
@@ -60,3 +60,111 @@
    .logo:hover {
     color: #fff;
   }
+
+  @media (max-width: 991px) {
+    .hero {
+      background-position: right;
+    }
+
+    .nav-menu {
+      padding-top: 18px;
+      padding-bottom: 18px;
+      border-top: 1px solid #000;
+      background-color: rgba(0, 0, 0, .85);
+    }
+    .nav-link {
+      padding-top: 16px;
+      padding-bottom: 16px;
+      font-size: 21px;
+      line-height: 27px;
+      text-align: center;
+    }
+    .menu-button {
+      padding: 20px 0px 20px 20px;
+      color: hsla(0, 0%, 100%, .62);
+      font-size: 25px;
+      line-height: 22px;
+    }
+    .menu-button:hover {
+      color: #fff;
+    }
+    .menu-button.w--open {
+      background-color: transparent;
+      color: #fff;
+    }
+    .menu-text {
+      margin-right: 3px;
+      padding: 2px;
+      float: left;
+      font-size: 19px;
+      line-height: 19px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+    }
+    .menu-icon {
+      float: left;
+    }
+  }
+  
+  @media (max-width: 767px) {
+    .hero-heading {
+      font-size: 61px;
+    }
+    .footer {
+      padding-right: 14px;
+      padding-left: 14px;
+    }
+    .rsvp-button {
+      margin-top: 15px;
+    }
+    .tour-date-row {
+      text-align: center;
+    }
+    .contact-link {
+      margin-bottom: 30px;
+    }
+    .submit-button.sign-up {
+      display: block;
+      margin-right: auto;
+      margin-left: auto;
+    }
+    .input-inline {
+      max-width: 100%;
+      margin-bottom: 20px;
+    }
+    .menu-button {
+      margin-right: 7px;
+    }
+    .album-list {
+      margin-bottom: 60px;
+    }
+    .venue {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      font-size: 15px;
+    }
+    .venue-list-item {
+      padding-top: 16px;
+      padding-bottom: 16px;
+    }
+  }
+  
+  @media (max-width: 479px) {
+    .hero-heading {
+      font-size: 45px;
+      line-height: 52px;
+    }
+    .contact-row {
+      padding-bottom: 16px;
+    }
+    .hero-container {
+      padding-right: 13px;
+      padding-left: 13px;
+    }
+    .button.big {
+      width: 100%;
+      margin-right: 0px;
+      margin-bottom: 12px;
+      margin-left: 0px;
+    }
+  }
