--- a/css/main.css
+++ b/css/main.css
@@ -168,3 +168,46 @@
       margin-left: 0px;
     }
   }
+
+/* @media (min-width: 390px)
+{ 
+  .w-container {
+    max-width: 880px;
+  }
+
+  .logo {
+    font-size: 25px;
+  }
+
+  .menu-text { 
+    font-size: 25px;
+    line-height: 30px;
+  }
+
+  .menu-icon {
+    font-size: 25px;
+    line-height: 30px;
+  }
+
+  .hero-heading {
+    font-size: 80px;
+    line-height: 85px;
+  }
+
+  .hero-subtitle {
+    font-size: 22px;
+    line-height: 25px;
+  }
+
+  .contact-row {
+    padding-bottom: 16px;
+  }
+
+  .button.big {
+    width: 100%;
+    margin-right: 0px;
+    margin-bottom: 12px;
+    margin-left: 0px;
+    font-size: 25px;
+  }
+} */
